cmake_minimum_required(VERSION 3.10)
project(DeteccionErroresMod C)
set(CMAKE_C_STANDARD 11)
find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)
BISON_TARGET(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c COMPILE_FLAGS "-d -v")
FLEX_TARGET(Scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/scanner.c)
ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_executable(parser_errors ${BISON_Parser_OUTPUTS} ${FLEX_Scanner_OUTPUTS} main.c)
